[package]
name = "grpc-demo-grpc"
version = "0.1.0"
authors = ["anshul <anshulgoel151999@gmail.com>"]
edition = "2018"

[[bin]]
name="server"
path="./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[[bin]]
name="keygen"
path="./src/keygen.rs"

[[bin]]
name="certgen"
path="./src/certgen.rs"

[[bin]]
name="keyinspect"
path="./src/keyinspect.rs"

[[bin]]
name="rootcert"
path="./src/rootcert.rs"

[[bin]]
name="database"
path="./src/database.rs"



[dependencies]
protobuf = "2"
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="*"
grpc-protobuf="*"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime    
bitcoin_hashes = "0.10.0"
rust-crypto = "0.2"
rmp-serde = "1.1.1"
serde = "1.0.152"
serde_derive = "1.0.152"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.23"
getopts = "0.2"
rpassword = "0.0.4"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
hex = "0.4"
rsa =  { version = "0.8.2", features = ["serde", "sha2"] }
rand = "0.8.5"
sha2 = { version = "0.10.6", optional = true, default-features = false, features = ["oid"] }


[build-dependencies]
protoc-rust-grpc = "0.8.2"

[profile.dev]
opt-level = 3

[profile.dev.package.num-bigint-dig]
opt-level = 3
