[package]
name = "pgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="server"
path="./src/server.rs"

[dependencies]
sequoia-openpgp = "1.14.0"
anyhow = "1.0.70"
grpc ="*"
grpc-protobuf="*"
protobuf = "2"

[build-dependencies]
protoc-rust-grpc = "0.8.2"


