[package]
name = "pohlib"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pohlib"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
sha2 = "0.9.8"
hex-literal = "0.3.3"
chrono = "0.4"
rand = "0.6"
bitcoin_hashes = "0.10.0"
rust-crypto = "0.2"
rmp-serde = "1.1.1"
serde = "1.0.152"
serde_derive = "1.0.152"

[dependencies.secp256k1]
features = ["rand", "bitcoin_hashes"]
version = "0.20.0"
